# oh-my-sftp

./: Cargo.toml  README.md
docs/: ARCHITECTURE.md  MODULE_DESIGN.md
src/: app.rs  event.rs  main.rs  tui.rs
src/components/: command_bar.rs  connection_list.rs  editor.rs  file_manager.rs  mod.rs  resource_dashboard.rs  status_bar.rs  terminal.rs
src/core/: config.rs  connection.rs  mod.rs  ssh_config.rs
src/services/: mod.rs  resource_service.rs  sftp_service.rs  ssh_service.rs
src/utils/: path.rs
