[package]
name = "oh-my-sftp"
version = "0.1.0"
edition = "2021"
description = "An SSH + SFTP all-in-one TUI tool for server management"

[dependencies]
# TUI
ratatui = "0.29"
crossterm = "0.28"
tui-textarea = "0.7"

# SSH / SFTP
ssh2 = "0.9"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# PTY (local terminal)
portable-pty = "0.8"

# Utilities
dirs = "5"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
glob = "0.3"
bytesize = "1"
whoami = "1"
base64 = "0.22"
